Styled MainPage.Xaml code

--- a/Ex01/Ex01/MainPage.xaml
+++ b/Ex01/Ex01/MainPage.xaml
@@ -3,22 +3,64 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Ex01.MainPage">
 
-    <ListView x:Name="lvwDocuments" SeparatorColor="White" >
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <ViewCell>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="45" />
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Frame CornerRadius="7" Margin="8" BackgroundColor='{Binding ColorHex}' />
-                        <Label Grid.Column="1" Text="{Binding Name}" TextColor="Black" VerticalOptions="Center" />
-                    </Grid>
-                </ViewCell>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-            </DataTemplate>
-        </ListView.ItemTemplate>
-    </ListView>
+        <StackLayout>
+            <Frame BackgroundColor="#F47562" Margin="8" Padding="8,0">
+
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition />
+                        <RowDefinition Height="40" />
+                    </Grid.RowDefinitions>
+
+                    
+
+                    <ListView x:Name="lvwDocuments" Grid.Row="1" BackgroundColor="#F47562" RowHeight="65" SeparatorColor="Transparent"  >
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <Frame BackgroundColor="white" Margin="8" Padding="16,0">
+                                        <Grid RowSpacing="0">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition  />
+                                                <RowDefinition  />
+                                            </Grid.RowDefinitions>
+
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition />
+                                                <ColumnDefinition Width="Auto" />
+                                            </Grid.ColumnDefinitions>
+                                            <Label Text="{Binding Name}" FontAttributes="Bold" VerticalOptions="Center" TextColor="#333333" FontSize="20" />
+                                            <!--handle this button click to create a PUT request that changes the card's closed state-->
+                                           <!-- <Button Text="Delete" FontSize="16" x:Name="btnCloseDocument" Grid.Column="1" Grid.RowSpan="2" VerticalOptions="Center" HorizontalOptions="Center" Clicked="btnCloseDocument_Clicked"  BackgroundColor="#F14024" TextColor="White"/>-->
+                                            <StackLayout Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal">
+
+                                                <Label Text="{Binding CreatedAt}" TextColor="#333333" FontSize="12"  VerticalOptions="Start" />
+                                                <!--<Image Source="http://www.iconsdb.com/icons/preview/gray/attach-2-xxl.png" VerticalOptions="Center" HeightRequest="9" />-->
+                                                <!-- <Label FontSize="Micro" Text="attachments:" />-->
+                                                <Label  Text="{Binding Type}" TextColor="#333333" FontAttributes="Bold" FontSize="12"  VerticalOptions="Start"  />
+                                            </StackLayout>
+                                        </Grid>
+                                    </Frame>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                    <Label x:Name="lblAddDocument" FontSize="24" Grid.Row="2"   TextColor="White" Text="Add a new document"   HorizontalOptions="Center"/>
+                </Grid>
+            </Frame>
+
+        </StackLayout>
+
+
+
+    </Grid>
 
 </ContentPage>
