--- a/Ex01/Ex01/MainPage.xaml
+++ b/Ex01/Ex01/MainPage.xaml
@@ -39,7 +39,7 @@
                                             </Grid.ColumnDefinitions>
                                             <Label Text="{Binding Name}" FontAttributes="Bold" VerticalOptions="Center" TextColor="#333333" FontSize="20" />
                                             <!--handle this button click to create a PUT request that changes the card's closed state-->
-                                           <!-- <Button Text="Delete" FontSize="16" x:Name="btnCloseDocument" Grid.Column="1" Grid.RowSpan="2" VerticalOptions="Center" HorizontalOptions="Center" Clicked="btnCloseDocument_Clicked"  BackgroundColor="#F14024" TextColor="White"/>-->
+                                            <Button Text="Delete" FontSize="16" x:Name="btnCloseDocument" Grid.Column="1" Grid.RowSpan="2" VerticalOptions="Center" HorizontalOptions="Center" Clicked="btnCloseDocument_Clicked"  BackgroundColor="#F14024" TextColor="White"/>
                                             <StackLayout Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal">
 
                                                 <Label Text="{Binding CreatedAt}" TextColor="#333333" FontSize="12"  VerticalOptions="Start" />
