--- a/Ex01/Ex01/Views/AccountPage.xaml
+++ b/Ex01/Ex01/Views/AccountPage.xaml
@@ -1,12 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Ex01.Views.AccountPage">
+             x:Class="Ex01.Views.AccountPage"
+              NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+
+        <Grid >
+            <StackLayout BackgroundColor="#F47562" Margin="0" Padding="5,10">
+
+
+
+                <Label  x:Name="AccountName"   TextColor="White" VerticalOptions="Center" HorizontalOptions="Start" FontSize="20" Margin="0,200,0,0"  ></Label>
+
+                <Label x:Name="AccountId"  TextColor="White" VerticalOptions="Center" HorizontalOptions="Start" FontSize="20"  ></Label>
+
+                <Label x:Name="AccountType"  TextColor="White" VerticalOptions="Center" HorizontalOptions="Start" FontSize="20"  ></Label>
+
+
+            </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
