--- a/Ex01/Ex01/Views/CodaDetailsPage.xaml
+++ b/Ex01/Ex01/Views/CodaDetailsPage.xaml
@@ -3,10 +3,50 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Ex01.Views.CodaDetailsPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid RowSpacing="0">
+
+
+            <Grid.RowDefinitions>
+
+                <RowDefinition />
+
+                <RowDefinition Height="0"/>
+            </Grid.RowDefinitions>
+
+
+            <Grid >
+
+
+
+
+                <Frame Padding="0" >
+                    <Image  Source="https://res.cloudinary.com/apideck/image/upload/v1566502912/catalog/coda-io/icon128x128.png"  Aspect="AspectFill"></Image>
+                </Frame>
+
+
+
+            </Grid>
+
+
+
+            <Grid Grid.Row="2">
+                <StackLayout BackgroundColor="#F46A54" Padding="5,10" >
+
+
+
+                    <Label  x:Name="PageName" TextColor="white"  VerticalOptions="Center" HorizontalOptions="Start" FontSize="20" Margin="0,50,0,0" ></Label>
+
+                    <Label x:Name="PageSubtitle" TextColor="white" VerticalOptions="Center" HorizontalOptions="Start" FontSize="20"  ></Label>
+
+
+
+                </StackLayout>
+
+            </Grid>
+
+
+
+
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
